Jacksum 3.7.0, TBD, 2023

- new features:
  - added HMAC support
    - extended option -a to understand HMAC definitions
    - added option -k and alias --key to specify the secret for HMACs
    - added option --hmacs to print all hash functions that work with HMAC
    - allowed option --info for hmac to print HMAC parameters
  - added string hashing support
    - added option --string-list to calculate hash values from strings stored in text files
    - added options --string-list-charset, and alias --charset-string-list
    - added option --ignore-empty-lines
    - added formatter alias #MESSAGE for #FILENAME
  - added console input mode
    - added password mode, and readline mode for option -q (and -k)
    - added option --charset-console, and alias --console-charset
  - added encodings
    - added encoding Z85 for option -E (without a limit on the length of the input)
    - added support for oct, Base32, Base32hex, Base64, Base64url, and Z85 to option -q

- bug fixes:
  - NPE if filename is null and -F is set (e.g. 'jacksum -a none -F "#SEQUENCE" -q txt:')
  - NPE can occur if both -a none and -E without -F have been set
  - #FILENAME is not replaced in <format> if both "-F <format>" and "-q file:<file>" have been used
  - aliases blake2sp-256 and blake2bp-512 are not accessible
  - regression: "jacksum -a all:blake -l" returns "blake2sp-256 is an unknown algorithm" due to missing alias

- improved performance:
  - performance for algorithm info output (-a <algos> [--list] --info)

- updated documentation:
  - added description and encoding tables for the most common encodings (see "jacksum -h -E")


Jacksum 3.6.0, April 16, 2023

- new algorithms:
  - added all finalists that support hashing of the NIST Lightweight Cryptography competition (2019–2023)
    from a bouncy castle pre-release:
    - ascon-hash, ascon-hasha, ascon-xof, and ascon-xofa
    - esch256, and esch384
    - photon-beetle